right align navbar icons and prevent section names from wraping on spaces

--- a/assembl/static2/css/components/navbar.scss
+++ b/assembl/static2/css/components/navbar.scss
@@ -59,6 +59,7 @@
     line-height: $navbar-line-height;
     padding: 0 20px;
     text-transform: uppercase;
+    white-space: nowrap;
 
     &:hover {
       color: $navbar-active-text-color;
@@ -191,7 +192,7 @@
     .navbar-icons {
       padding: 0 0;
       margin-left: auto;
-      justify-content: right;
+      justify-content: flex-end;
       flex: 1;
       z-index: 10;
     }
